syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

service EventService {
	rpc AddEvent (Event) returns (Empty) {};
	rpc RemoveEvent (Event) returns (Empty) {};
	rpc UpdateEvent (Event) returns (Empty) {};
	rpc PrintAll (Empty) returns (Response) {};
}

message Event {
  string name = 1;
  google.protobuf.Timestamp beginning = 2;
  google.protobuf.Timestamp end = 3;

  enum Type {
    MEETING = 0;
    REMINDER = 1;
    OTHER = 2;
  }
  Type eventType = 4;
}

message Empty {

}

message Response {
    string resp = 1;
}
